--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2380,6 +2380,9 @@
   <java-symbol type="bool" name="config_reject_ggsn_perm_failure" />
   <java-symbol type="bool" name="config_protocol_errors_perm_failure" />
 
+  <!-- Gesture Sensor -->
+  <java-symbol type="bool" name="config_enableGestureService" />
+
   <!-- Regional Specific Symbols -->
   <java-symbol type="bool" name="config_dateformat" />
   <java-symbol type="integer" name="wifi_hotspot_security_type" />
