Status bar: Add HSPA+ icons
Forward port H+ icon in the status bar when connected to HSPA+
Uses new vector drawables by blunden

Change-Id: Ia745c524d5e2530f50f12f961ea8533a4c8f5842
Signed-off-by: iceandfire <arhamjamal@gmail.com>

Conflicts:
	packages/SystemUI/res/values/cm_strings.xml

Conflicts:
	packages/SystemUI/res/values/cm_strings.xml

Conflicts:
	packages/SystemUI/res/values/cm_strings.xml

--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -148,6 +148,9 @@
     <string name="accessibility_quick_settings_sync_on">Sync on</string>
     <string name="accessibility_quick_settings_sync_changed_off">Sync turned off</string>
     <string name="accessibility_quick_settings_sync_changed_on">Sync turned on</string>
+
+	<!-- Content description of the data connection type HSPA+ for accessibility (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_data_connection_hspap">HSPA+</string>
 </resources>
 
 
