--- a/packages/SystemUI/res/values/orion_strings.xml
+++ b/packages/SystemUI/res/values/orion_strings.xml
@@ -25,4 +25,6 @@
          all of the currently visible notifications. [CHAR LIMIT=10]-->
     <string name="clear_recents">Close all recent</string>
 
+    <!-- Screenshot QS tile -->
+    <string name="quick_settings_screenshot_label">Screenshot</string>
 </resources>
