--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -51,6 +51,7 @@
     <string name="quick_settings_title_tiles">Tiles</string>
     <string name="quick_settings_remove">Remove tile</string>
 	<string name="quick_settings_network_adb_label">ADB over network</string>
+    <string name="quick_settings_screen_off">Screen off</string>
 
     <string name="quick_settings_screen_timeout_detail_title">Screen timeout</string>
     <!-- Content description of the screen timeout tile in quick settings (not shown on the screen). [CHAR LIMIT=NONE] -->
