--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -50,9 +50,10 @@
     <string name="quick_settings_title_header">Header</string>
     <string name="quick_settings_title_tiles">Tiles</string>
     <string name="quick_settings_remove">Remove tile</string>
-	<string name="quick_settings_network_adb_label">ADB over network</string>
     <string name="quick_settings_screen_off">Screen off</string>
-
+	<string name="quick_settings_screen_off">Screen off</string>
+	<string name="quick_settings_reboot_label">Reboot</string>
+    <string name="quick_settings_reboot_recovery_label">Recovery</string>
     <string name="quick_settings_screen_timeout_detail_title">Screen timeout</string>
     <!-- Content description of the screen timeout tile in quick settings (not shown on the screen). [CHAR LIMIT=NONE] -->
     <string name="accessibility_quick_settings_screen_timeout">Screen timeout: <xliff:g id="timeout" example="30 seconds">%s</xliff:g>.</string>
