Add Music QS Tile
picked from here: http://goo.gl/ehaoMU

Adapted to lollipop from commit:
Author: kufikugel
Quicksettings customizations Slim style
d85304fac9bde550beeeeca0dba2cd49686f20d7

Adapted double click to open music app from commit:
Author: Jubakuba
SystemUI: Pimp-up Media Tile (1/1)
5a14de5db237969607e0aabb9b8c04737b122dd3

AICPfy:
PS1: Gave proper credit to kufikugel for the original code
PS2: Fix build by overriding all needed methids

DU edits (I'm sure the benzo fuck head will delete)
- Adapted to M and made to work with AOSP Quick settings

Change-Id: I4d3008d3dcfdf56f1cef25a602a153264c00c80f
Signed-off-by: StarkDroid <gamerprince.exp@gmail.com>

Conflicts:
	packages/SystemUI/res/values/config.xml
	packages/SystemUI/src/com/android/systemui/tuner/QsTuner.java

Conflicts:
	packages/SystemUI/res/values/config.xml
	packages/SystemUI/res/values/du_strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QSTileHost.java
	packages/SystemUI/src/com/android/systemui/tuner/QsTuner.java

--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -133,6 +133,11 @@
     <!-- Battery Saver QS Tile -->
     <string name="quick_settings_battery_saver">Battery saver</string>
     <string name="quick_settings_battery_saver_off">Battery saver off</string>
+
+    <!-- Music QS Tile -->
+    <string name="quick_settings_music_label">Music</string>
+    <string name="quick_settings_music_play">Play</string>
+    <string name="quick_settings_music_pause">Pause</string>
 </resources>
 
 
