--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -119,7 +119,7 @@
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_default" translatable="false">
-        wifi,bt,cell,airplane,rotation,flashlight,location,edit,cast,hotspot,inversion,dnd
+        wifi,bt,cell,airplane,rotation,flashlight,location,edit,dnd
     </string>
 
     <!-- The tiles to display in QuickSettings -->
