--- a/packages/SystemUI/res/layout/status_bar_expanded_header.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded_header.xml
@@ -127,6 +127,7 @@
         android:paddingEnd="16dp"
         android:visibility="invisible"
         android:textAppearance="@style/TextAppearance.StatusBar.Expanded.EmergencyCallsOnly"
+        android:text="@*android:string/emergency_calls_only"
         android:singleLine="true"
         android:gravity="center_vertical" />
 
