--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2426,5 +2426,7 @@
   <java-symbol type="bool" name="config_multiColorBatteryLed" />
   <java-symbol type="array" name="notification_light_package_mapping" />
   <java-symbol type="array" name="config_notificationNoAlertsVibePattern" />
-
+  
+  <!-- Quick Settings tile defaults -->
+  <java-symbol type="string" name="config_defaultQuickSettingsTiles" />
 </resources>
