SystemUI: Add LTE Tile
Change-Id: I16a18532087dba75c65fe3dd5d1b190fb551a7bb

Conflicts:
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QSTileHost.java

Update QS-LTE_tile

Change-Id: Ic393ebcf24f8b9bc1be3a96b8737ac410fc2d30b

remove unused lines

Change-Id: I4a0da49d0b665d56ed774ff22ee3adc0c9ecd1b5

Conflicts:
	core/java/com/android/internal/util/cm/QSConstants.java
	packages/SystemUI/res/values/xenonhd_strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QSTileHost.java

--- a/packages/SystemUI/res/values/orion_strings.xml
+++ b/packages/SystemUI/res/values/orion_strings.xml
@@ -38,4 +38,9 @@
     <string name="accessibility_quick_settings_usb_tether_changed_off">USB tethering turned off</string>
     <string name="accessibility_quick_settings_usb_tether_changed_on">USB tethering turned on</string>
     <string name="quick_settings_usb_tether_label">USB tethering</string>
+
+    <!-- LTE Tile -->
+    <string name="qs_lte_label">LTE</string>
+    <string name="lte_on">LTE ON </string>
+    <string name="lte_off">LTE OFF</string>
 </resources>
